--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "node-telegram-bot-api": "^0.63.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "geoip-lite": "^1.5.1"
   }
 }
